fix bad change and align white space

--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -6,15 +6,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 10px;
+  padding: 30px;
   background:rgba(255,255,255, .5);
-  width: 40%;
+  width: 30%;
   left: 50%;
   margin-top: 15%;
   position: fixed;
   transform: translate(-50%,0%);
   min-width: 300px;
   color: black;
+  font-size: 15px;
 }
 .login-form-container{
   margin: 0 auto;
